fixed alignment and added hours/phone info in table format. Also made left section grey box take up entire height of screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -111,16 +111,6 @@ p {
 	width:20vw;
 }
 }
-
-
-
-.information {
-	padding-top:10px;
-	background-color:#F0F0F0;
-	max-width:100%;
-	height: 625px;
-	text-align:center;
-}
 .services {
 	padding: 0px 5px 35px 5px;
 }
